@@ -50,7 +50,7 @@ public class CombatRadarPlugin extends BaseEveryFrameCombatPlugin
         if (!initialized)
         {
             initialized = true;
-            renderRadius = Display.getHeight() / 10f;
+            renderRadius = RadarSettings.getRadarRenderRadius();
             renderCenter = new Vector2f(Display.getWidth() - (renderRadius * 1.2f),
                     renderRadius * 1.2f);
             setZoomLevel(RadarSettings.getNumZoomLevels());
@@ -185,7 +185,6 @@ public class CombatRadarPlugin extends BaseEveryFrameCombatPlugin
         }
 
         // Finalize drawing
-        //radarInfo.disableStencilTest(); // Minor idiot-proofing
         glDisable(GL_BLEND);
         glPopMatrix();
         glMatrixMode(GL_PROJECTION);
